--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "ts-node src/main.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -30,6 +30,7 @@
     "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.11.1",
     "class-transformer": "^0.5.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
