--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
