--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.11.1",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -40,6 +42,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12",
+    "validator": "^13.9.0",
     "webpack": "^5.0.0"
   },
   "devDependencies": {
