--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0",
     "webpack": "^5.0.0"
   },
