--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql-tools": "^8.3.18",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^3.7.3",
+    "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
